--- a/index.html
+++ b/index.html
@@ -2,41 +2,31 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>DreamEcho - Alumno</title>
+  <title>DreamEcho</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.39/Tone.min.js"></script>
   <style>
-    html, body {
-      min-height: 100%;
-      margin: 0;
-      font-family: sans-serif;
-      background: #f5f5f5;
-    }
     body {
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
+      font-family: sans-serif;
+      padding: 1em;
       text-align: center;
+      background-color: #c1f7f2;
+      margin: 0;
+      min-height: 100vh;
+      overflow-x: hidden;
       overflow-y: auto;
-      padding: 1em 0;
     }
-    .container {
+    .marco {
+      width: 90%;
       max-width: 700px;
-      width: 95%;
-      padding: 2em;
-      background: #fff;
+      margin: 1em auto;
+      padding: 1em;
+      background: white;
+      border: 5px solid blue;
       border-radius: 1em;
-      border: 3px solid orange;
-      box-shadow: 0 0 20px rgba(0,0,0,.1);
+      box-sizing: border-box;
     }
-    h1 {
-      font-size: 3em;
-      margin-bottom: .2em;
-      margin-top: 10px;
-    }
-    .byline a {
-      text-decoration: none;
-      color: inherit;
-    }
+    h1 { font-size: 2.5em; margin: 0.2em 0; }
     .pin-section { margin-bottom: 1em; }
     .pin-section input {
       padding: .6em; font-size: 1em; width: 60%; margin-right: .5em;
@@ -44,11 +34,15 @@
     .pin-section button {
       padding: .6em 1em; font-size: 1em;
       cursor: pointer; border: none; border-radius: .7em;
-      background: #ff9800; color: #fff;
+      background: #2196f3; color: #fff;
+    }
+    #mainContent { display: none; }
+    #recuentoOyentes, #status {
+      font-size: 1.1em; color: #555; margin: .5em 0;
     }
     .video-container {
       display: flex; gap: 1em; justify-content: center;
-      flex-wrap: nowrap; margin-bottom: 1em;
+      flex-wrap: nowrap; margin: 1em 0;
     }
     .video-block {
       flex: 1 1 45%; display: flex;
@@ -56,22 +50,26 @@
     }
     .video-block video {
       width: 100%; max-height: 250px;
-      background: #000; border-radius: .5em;
+      background: black; border-radius: .5em;
     }
     .video-label {
-      margin-top: 0.3em; font-weight: bold; color: #333;
+      margin-top: .3em; font-weight: bold; color: #333;
     }
     #talkBtn {
       padding: .8em 2em; font-size: 1.1em; margin: 1em 0; margin-top: -30px;
       border: none; border-radius: .7em;
-      background: #ff9800; color: #fff;
+      background: #2196f3; color: white;
       cursor: pointer; user-select: none;
     }
     #talkBtn:active {
       transform: scale(.96); background: red;
     }
-    .midi-section { margin: 1.5em 0; text-align: center; }
-    .midi-section h3 { margin-bottom: .5em; font-size: 1.2em; }
+    .midi-section {
+      margin: 1.5em 0; text-align: center;
+    }
+    .midi-section h3 {
+      margin-bottom: .5em; font-size: 1.2em;
+    }
     .midi-controls {
       display: flex; justify-content: center;
       align-items: center; gap: 1em; margin-bottom: .5em;
@@ -93,20 +91,18 @@
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>DreamEcho - Alumno</h1>
-    <p class="byline">
-      <a href="https://www.youtube.com/@rafgim" target="_blank" rel="noopener">
-        © By Rafael Gimeno
-      </a>
-    </p>
+  <div class="marco">
+    <h1>DreamEcho</h1>
+    <p><a href="https://www.youtube.com/@rafgim" target="_blank" rel="noopener">
+      © By Rafael Gimeno
+    </a></p>
 
     <div id="pinSection" class="pin-section">
-      <input type="text" id="pinInput" placeholder="Introduce el PIN de sala">
-      <button id="pinBtn">Unirse</button>
+      <input type="text" id="pinInput" placeholder="Introduce tu PIN de la sala">
+      <button id="pinBtn">Entrar</button>
     </div>
 
-    <div id="mainContent" style="display:none;">
+    <div id="mainContent">
       <div class="video-container">
         <div class="video-block">
           <video id="localVideo" autoplay muted playsinline></video>
@@ -114,18 +110,17 @@
         </div>
         <div class="video-block">
           <video id="remoteVideo" autoplay playsinline></video>
-          <p class="video-label">Profesor</p>
+          <p class="video-label">Otro</p>
         </div>
       </div>
 
       <div id="keyboard"></div>
-
       <button id="talkBtn">📢 Mantén pulsado para hablar</button>
 
       <div class="midi-section">
-        <h3>MIDI recibido (del profesor):</h3>
+        <h3>MIDI recibido (del otro participante):</h3>
         <div class="midi-controls">
-          <span class="label">Seleccionar pianos digitales</span>
+          <span class="label">Seleccionar piano digital</span>
           <div id="midiOutSelectCont"></div>
           <button id="virtualBtn">🎧 Usar sonido virtual</button>
         </div>
@@ -138,8 +133,8 @@
         <div id="midiSendStatus"></div>
       </div>
 
-      <p id="estado">Conectando...</p>
-      <p id="oyentes">Oyentes conectados: --</p>
+      <p id="recuentoOyentes">Oyentes conectados: --</p>
+      <p id="status">Esperando conexión…</p>
     </div>
   </div>
 
@@ -150,12 +145,18 @@
 
   <script>
     let pin = null;
+    let ws, pc, piano;
+    let realAudioTrack, silentAudioTrack, audioSender;
+    let pressingTalk = false, remoteSpeaking = false;
+    let midiAccess, midiInputs = [], midiOutputs = [], midiOutDevice, midiInDevice, midiChannel;
+    let synth, useVirtual = true;
+
     const pinSection        = document.getElementById('pinSection');
     const pinInput          = document.getElementById('pinInput');
     const pinBtn            = document.getElementById('pinBtn');
     const mainContent       = document.getElementById('mainContent');
-    const estadoEl          = document.getElementById('estado');
-    const oyentesEl         = document.getElementById('oyentes');
+    const statusEl          = document.getElementById('status');
+    const oyentesEl         = document.getElementById('recuentoOyentes');
     const localVideo        = document.getElementById('localVideo');
     const remoteVideo       = document.getElementById('remoteVideo');
     const talkBtn           = document.getElementById('talkBtn');
@@ -166,32 +167,88 @@
     const midiSendStatus    = document.getElementById('midiSendStatus');
     const keyboardEl        = document.getElementById('keyboard');
 
-    let ws, pc, piano;
-    let realAudioTrack, silentAudioTrack, audioSender;
-    let pressingTalk = false, remoteSpeaking = false;
-    let midiAccess, midiInputs = [], midiOutputs = [];
-    let midiOutDevices = [], midiInDevice, midiChannel;
-    let synth, useVirtual = true;
+    async function connectWithPin() {
+      pin = pinInput.value.trim();
+      if (!pin) return;
+      pinSection.style.display = 'none';
+      mainContent.style.display = 'block';
+
+      piano = new PianoKeys.Keyboard(keyboardEl, {
+        width:  keyboardEl.clientWidth,
+        height: keyboardEl.clientHeight,
+        keyColour: '#fff',
+        accidentalKeyColour: '#000',
+        activeColour: '#4a4'
+      });
+
+      ws = new WebSocket('wss://dreamecho.onrender.com');
+      ws.onopen = () => {
+        statusEl.textContent = 'Conectado, esperando al otro…';
+        sendMessage({ type:'ping' });
+        setupMIDI();
+        setupSampler();
+      };
+
+      ws.onmessage = async ({ data }) => {
+        const msg = JSON.parse(typeof data === 'string' ? data : await data.text());
+        switch (msg.type) {
+          case 'stats':
+            oyentesEl.textContent = `Oyentes conectados: ${msg.clients}`;
+            if (msg.clients >= 2) {
+              statusEl.textContent = 'Otro participante conectado. Iniciando llamada…';
+              startWebRTC();
+            }
+            break;
+          case 'signal':
+            if (msg.pin !== pin) return;
+            if (msg.offer) {
+              await pc.setRemoteDescription(new RTCSessionDescription(msg.offer));
+              const ans = await pc.createAnswer();
+              await pc.setLocalDescription(ans);
+              sendMessage({ type:'signal', answer: pc.localDescription });
+            } else if (msg.answer) {
+              await pc.setRemoteDescription(new RTCSessionDescription(msg.answer));
+            } else if (msg.candidate) {
+              await pc.addIceCandidate(new RTCIceCandidate(msg.candidate));
+            }
+            break;
+          case 'talk':
+            remoteSpeaking = msg.speaking;
+            updateMicState();
+            break;
+        }
+      };
+
+      ws.onerror = () => { statusEl.textContent = 'Error en la conexión.'; };
+      ws.onclose = () => { statusEl.textContent = 'Conexión cerrada.'; };
+    }
+
+    pinBtn.addEventListener('click', connectWithPin);
+
+    function sendMessage(obj) {
+      obj.pin = pin;
+      ws.send(JSON.stringify(obj));
+    }
 
     function createSilentAudioTrack() {
-      const ctx = new (window.AudioContext||window.webkitAudioContext)();
+      const ctx = new (window.AudioContext || window.webkitAudioContext)();
       const osc = ctx.createOscillator();
       osc.frequency.value = 0;
       const dst = ctx.createMediaStreamDestination();
       osc.connect(dst);
       osc.start();
-      setTimeout(()=>osc.stop(),100);
+      setTimeout(() => osc.stop(), 100);
       return dst.stream.getAudioTracks()[0];
     }
 
     async function initLocalVideo() {
-      const stream = await navigator.mediaDevices.getUserMedia({ video:true, audio:true });
-      realAudioTrack   = stream.getAudioTracks()[0];
+      const stream = await navigator.mediaDevices.getUserMedia({ video: true, audio: true });
+      realAudioTrack = stream.getAudioTracks()[0];
       silentAudioTrack = createSilentAudioTrack();
       localVideo.srcObject = stream;
-      stream.getTracks().forEach(t => {
-        const sender = pc.addTrack(t, stream);
-        if (t.kind === 'audio') audioSender = sender;
+      stream.getTracks().forEach(track => {
+        const sender = pc.addTrack(track, stream);
+        if (track.kind === 'audio') audioSender = sender;
       });
       if (audioSender) audioSender.replaceTrack(silentAudioTrack);
     }
@@ -202,85 +259,79 @@
       if (audioSender.track !== track) audioSender.replaceTrack(track);
     }
 
-    function pressTalk() {
+    ['mousedown','touchstart'].forEach(e => talkBtn.addEventListener(e, () => {
       pressingTalk = true;
-      sendMessage({ type:'talk', speaking:true });
+      sendMessage({ type:'talk', speaking: true });
       talkBtn.style.background = 'red';
       updateMicState();
-    }
-    function releaseTalk() {
+    }));
+    ['mouseup','mouseleave','touchend','touchcancel'].forEach(e => talkBtn.addEventListener(e, () => {
       pressingTalk = false;
-      sendMessage({ type:'talk', speaking:false });
+      sendMessage({ type:'talk', speaking: false });
       talkBtn.style.background = '';
       updateMicState();
-    }
-    ['mousedown','touchstart'].forEach(e=>talkBtn.addEventListener(e,pressTalk));
-    ['mouseup','mouseleave','touchend','touchcancel'].forEach(e=>talkBtn.addEventListener(e,releaseTalk));
+    }));
 
-    function sendMessage(obj) {
-      obj.pin = pin;
-      ws.send(JSON.stringify(obj));
-    }
+    async function startWebRTC() {
+      if (pc) {
+        pc.getSenders().forEach(s => s.track && s.track.stop());
+        pc.close();
+      }
+      pc = new RTCPeerConnection({ iceServers: [{ urls: 'stun:stun.l.google.com:19302' }] });
+      midiChannel = pc.createDataChannel('midi', { ordered: true });
+      midiChannel.onmessage = ({ data }) => handleMidiMessage(JSON.parse(data));
 
-    async function initPeerConnection() {
-      pc = new RTCPeerConnection({ iceServers:[{ urls:'stun:stun.l.google.com:19302' }] });
-      pc.ondatachannel = ev => {
-        midiChannel = ev.channel;
-        midiChannel.onmessage = ({ data }) => handleMidiMessage(JSON.parse(data));
-      };
+      await initLocalVideo();
+
+      const offer = await pc.createOffer();
+      await pc.setLocalDescription(offer);
+      sendMessage({ type:'signal', offer: pc.localDescription });
+
       pc.onicecandidate = ({ candidate }) => {
         if (candidate) sendMessage({ type:'signal', candidate });
       };
       pc.ontrack = ev => {
         remoteVideo.srcObject = ev.streams[0];
       };
-      await initLocalVideo();
+      pc.ondatachannel = ev => {
+        if (ev.channel.label === 'midi') {
+          midiChannel = ev.channel;
+          midiChannel.onmessage = ({ data }) => handleMidiMessage(JSON.parse(data));
+        }
+      };
     }
 
     async function setupMIDI() {
-      midiAccess  = await navigator.requestMIDIAccess();
-      midiInputs  = Array.from(midiAccess.inputs.values());
+      midiAccess = await navigator.requestMIDIAccess();
+      midiInputs = Array.from(midiAccess.inputs.values());
       midiOutputs = Array.from(midiAccess.outputs.values());
 
-      // → SALIDAS MIDI (varias)
       midiOutSelectCont.innerHTML = '';
       if (midiOutputs.length) {
         const sel = document.createElement('select');
-        sel.multiple = true;
-        sel.size = Math.min(4, midiOutputs.length);
-        sel.innerHTML = midiOutputs.map((o,i) =>
-          `<option value="${i}">${o.name}</option>`
-        ).join('');
+        sel.innerHTML = '<option value="">-- Elige tu teclado digital --</option>';
+        midiOutputs.forEach((o,i) => sel.innerHTML += `<option value="${i}">${o.name}</option>`);
         sel.onchange = () => {
-          // actualizar lista de dispositivos seleccionados
-          midiOutDevices = Array.from(sel.selectedOptions)
-                                 .map(opt => midiOutputs[+opt.value]);
-          if (midiOutDevices.length) {
-            midiStatus.textContent = 'MIDI OUT en: ' +
-              midiOutDevices.map(d=>d.name).join(', ');
-            useVirtual = false;
-          } else {
-            midiStatus.textContent = 'Usando sonido virtual';
-            useVirtual = true;
-          }
+          midiOutDevice = sel.value ? midiOutputs[+sel.value] : null;
+          midiStatus.textContent = midiOutDevice ? `MIDI OUT: ${midiOutDevice.name}` : 'Usando sonido virtual';
+          useVirtual = !midiOutDevice;
         };
         midiOutSelectCont.appendChild(sel);
       } else {
         midiOutSelectCont.textContent = '(No hay salidas MIDI físicas conectadas)';
       }
 
-      // → ENTRADAS MIDI (enviar al profe)
       midiInSelectCont.innerHTML = '';
       if (midiInputs.length) {
         const selIn = document.createElement('select');
         selIn.innerHTML = '<option value="">-- Elige entrada MIDI --</option>';
-        midiInputs.forEach((i,k)=> selIn.innerHTML += `<option value="${k}">${i.name}</option>`);
+        midiInputs.forEach((i,k) => selIn.innerHTML += `<option value="${k}">${i.name}</option>`);
         selIn.onchange = () => {
           if (midiInDevice) midiInDevice.onmidimessage = null;
           midiInDevice = selIn.value ? midiInputs[+selIn.value] : null;
           if (midiInDevice) {
             midiInDevice.onmidimessage = ({ data }) => {
-              if (midiChannel && midiChannel.readyState==='open') {
+              if (midiChannel && midiChannel.readyState === 'open') {
                 midiChannel.send(JSON.stringify({ data: Array.from(data) }));
               }
             };
@@ -308,33 +359,28 @@
           A5:'A5.mp3', C6:'C6.mp3','D#6':'Ds6.mp3','F#6':'Fs6.mp3',
           A7:'A7.mp3', C8:'C8.mp3'
         },
-        baseUrl: 'https://tonejs.github.io/audio/salamander/',
-        release: 0.4,
-        onload: () => midiStatus.textContent = 'Sonido virtual listo'
+        baseUrl:'https://tonejs.github.io/audio/salamander/',
+        release:0.4,
+        onload:()=> midiStatus.textContent='Sonido virtual listo'
       }).toDestination();
     }
 
     function handleMidiMessage(msg) {
       const [st, note, vel] = msg.data;
       const cmd = st & 0xf0;
-      const noteName = Tone.Frequency(note, 'midi').toNote();
+      const noteName = Tone.Frequency(note,'midi').toNote();
 
-      // pintar teclado
       if (cmd === 0x90 && vel > 0) {
         piano.fillKey(noteName);
       } else if (cmd === 0x80 || (cmd === 0x90 && vel === 0)) {
         piano.clearKey(noteName);
       }
 
-      // enviar a todos los dispositivos físicos seleccionados
-      if (!useVirtual && midiOutDevices.length) {
-        midiOutDevices.forEach(device =>
-          device.send(new Uint8Array(msg.data))
-        );
+      if (!useVirtual && midiOutDevice) {
+        midiOutDevice.send(new Uint8Array(msg.data));
       } else {
-        // caída al sintetizador virtual
         if (!synth) return;
-        const freq = Tone.Frequency(note, 'midi').toFrequency();
+        const freq = Tone.Frequency(note,'midi').toFrequency();
         if (cmd === 0x90 && vel > 0) {
           synth.triggerAttack(freq, Tone.now(), Math.pow(vel/127,2));
         } else {
@@ -342,61 +388,6 @@
         }
       }
     }
-
-    pinBtn.onclick = () => {
-      const v = pinInput.value.trim();
-      if (!v) return;
-      pin = v;
-      pinSection.style.display = 'none';
-      mainContent.style.display = 'block';
-
-      piano = new PianoKeys.Keyboard(keyboardEl, {
-        width:  keyboardEl.clientWidth,
-        height: keyboardEl.clientHeight,
-        keyColour: '#fff',
-        accidentalKeyColour: '#000',
-        activeColour: '#4a4'
-      });
-
-      ws = new WebSocket('wss://dreamecho.onrender.com');
-      ws.onopen = () => {
-        estadoEl.textContent = 'Conectado, esperando al profesor…';
-        sendMessage({ type: 'ping' });
-        setupMIDI();
-        setupSampler();
-      };
-      ws.onmessage = async ({ data }) => {
-        const msg = JSON.parse(typeof data==='string' ? data : await data.text());
-        switch (msg.type) {
-          case 'stats':
-            oyentesEl.textContent = `Oyentes conectados: ${msg.clients}`;
-            if (msg.clients >= 2 && !pc) {
-              estadoEl.textContent = 'Profesor conectado. Configurando llamada…';
-              await initPeerConnection();
-            }
-            break;
-          case 'talk':
-            remoteSpeaking = msg.speaking;
-            updateMicState();
-            break;
-          case 'signal':
-            if (msg.pin !== pin) return;
-            if (msg.offer) {
-              await pc.setRemoteDescription(new RTCSessionDescription(msg.offer));
-              const ans = await pc.createAnswer();
-              await pc.setLocalDescription(ans);
-              sendMessage({ type: 'signal', answer: pc.localDescription });
-            } else if (msg.answer) {
-              await pc.setRemoteDescription(new RTCSessionDescription(msg.answer));
-            } else if (msg.candidate) {
-              await pc.addIceCandidate(new RTCIceCandidate(msg.candidate));
-            }
-            break;
-        }
-      };
-      ws.onerror = () => { estadoEl.textContent = 'Error en la conexión.'; };
-      ws.onclose = () => { estadoEl.textContent = 'Conexión cerrada.'; };
-    };
   </script>
 </body>
 </html>
