--- a/index.html
+++ b/index.html
@@ -195,29 +195,26 @@
           case 'stats':
             oyentesEl.textContent = `Oyentes conectados: ${msg.clients}`;
             if (msg.clients >= 2) {
-              statusEl.textContent = 'Otro participante conectado. Iniciando llamada…';
-              startWebRTC();
+              statusEl.textContent = 'Otro conectado. Preparando llamada…';
+              await startWebRTC();
             }
             break;
           case 'signal':
             if (msg.pin !== pin) return;
-            if (msg.offer) {
-              await pc.setRemoteDescription(new RTCSessionDescription(msg.offer));
-              const ans = await pc.createAnswer();
-              await pc.setLocalDescription(ans);
+            if (msg.offer && pc) {
+              await pc.setRemoteDescription(msg.offer);
+              const answer = await pc.createAnswer();
+              await pc.setLocalDescription(answer);
               sendMessage({ type:'signal', answer: pc.localDescription });
             } else if (msg.answer) {
-              await pc.setRemoteDescription(new RTCSessionDescription(msg.answer));
+              await pc.setRemoteDescription(msg.answer);
             } else if (msg.candidate) {
-              await pc.addIceCandidate(new RTCIceCandidate(msg.candidate));
+              await pc.addIceCandidate(msg.candidate);
             }
-            break;
-          case 'talk':
-            remoteSpeaking = msg.speaking;
-            updateMicState();
             break;
         }
       };
+
       ws.onerror = () => statusEl.textContent = 'Error en la conexión.';
       ws.onclose = () => statusEl.textContent = 'Conexión cerrada.';
     }
@@ -245,27 +242,27 @@
       realAudioTrack = stream.getAudioTracks()[0];
       silentAudioTrack = createSilentAudioTrack();
       localVideo.srcObject = stream;
-      stream.getTracks().forEach(track => {
+      for (const track of stream.getTracks()) {
         const sender = pc.addTrack(track, stream);
-        if (track.kind==='audio') audioSender = sender;
-      });
+        if (track.kind === 'audio') audioSender = sender;
+      }
       if (audioSender) audioSender.replaceTrack(silentAudioTrack);
     }
 
     function updateMicState() {
       if (!audioSender) return;
-      const track = (pressingTalk && !remoteSpeaking)? realAudioTrack : silentAudioTrack;
+      const track = (pressingTalk && !remoteSpeaking) ? realAudioTrack : silentAudioTrack;
       if (audioSender.track !== track) audioSender.replaceTrack(track);
     }
 
     ['mousedown','touchstart'].forEach(e=>talkBtn.addEventListener(e,()=>{
-      pressingTalk=true;
+      pressingTalk = true;
       sendMessage({type:'talk',speaking:true});
       talkBtn.style.background='red';
       updateMicState();
     }));
     ['mouseup','mouseleave','touchend','touchcancel'].forEach(e=>talkBtn.addEventListener(e,()=>{
-      pressingTalk=false;
+      pressingTalk = false;
       sendMessage({type:'talk',speaking:false});
       talkBtn.style.background='';
       updateMicState();
@@ -276,6 +273,7 @@
         pc.getSenders().forEach(s=>s.track&&s.track.stop());
         pc.close();
       }
+
       pc = new RTCPeerConnection({
         iceServers: [
           { urls: 'stun:stun.l.google.com:19302' },
@@ -287,24 +285,8 @@
         ]
       });
 
-      // Reinicio ICE si falla
-      pc.oniceconnectionstatechange = () => {
-        if (pc.iceConnectionState === 'failed' || pc.iceConnectionState === 'disconnected') {
-          statusEl.textContent = 'Reiniciando conexión…';
-          pc.createOffer({ iceRestart: true })
-            .then(offer => pc.setLocalDescription(offer))
-            .then(() => sendMessage({ type:'signal', offer: pc.localDescription }));
-        }
-      };
-
-      midiChannel = pc.createDataChannel('midi', { ordered: true });
+      midiChannel = pc.createDataChannel('midi');
       midiChannel.onmessage = ({ data }) => handleMidiMessage(JSON.parse(data));
-
-      await initLocalVideo();
-
-      const offer = await pc.createOffer();
-      await pc.setLocalDescription(offer);
-      sendMessage({ type:'signal', offer: pc.localDescription });
 
       pc.onicecandidate = ({ candidate }) => {
         if (candidate) sendMessage({ type:'signal', candidate });
@@ -313,11 +295,15 @@
         remoteVideo.srcObject = ev.streams[0];
       };
       pc.ondatachannel = ev => {
-        if (ev.channel.label === 'midi') {
-          midiChannel = ev.channel;
-          midiChannel.onmessage = ({ data }) => handleMidiMessage(JSON.parse(data));
-        }
+        midiChannel = ev.channel;
+        midiChannel.onmessage = ({ data }) => handleMidiMessage(JSON.parse(data));
       };
+
+      await initLocalVideo();
+
+      const offer = await pc.createOffer();
+      await pc.setLocalDescription(offer);
+      sendMessage({ type:'signal', offer: pc.localDescription });
     }
 
     async function setupMIDI() {
@@ -331,7 +317,7 @@
         sel.innerHTML = '<option value="">-- Elige tu teclado digital --</option>';
         midiOutputs.forEach((o,i)=> sel.innerHTML+=`<option value="${i}">${o.name}</option>`);
         sel.onchange = () => {
-          midiOutDevice = sel.value? midiOutputs[+sel.value] : null;
+          midiOutDevice = sel.value!==''? midiOutputs[+sel.value] : null;
           midiStatus.textContent = midiOutDevice? `MIDI OUT: ${midiOutDevice.name}` : 'Usando sonido virtual';
           useVirtual = !midiOutDevice;
         };
@@ -347,7 +333,7 @@
         midiInputs.forEach((i,k)=> selIn.innerHTML+=`<option value="${k}">${i.name}</option>`);
         selIn.onchange = () => {
           if (midiInDevice) midiInDevice.onmidimessage = null;
-          midiInDevice = selIn.value? midiInputs[+selIn.value] : null;
+          midiInDevice = selIn.value!==''? midiInputs[+selIn.value] : null;
           if (midiInDevice) {
             midiInDevice.onmidimessage = ({ data }) => {
               if (midiChannel && midiChannel.readyState==='open') {
@@ -391,7 +377,7 @@
 
       if (cmd===0x90 && vel>0) {
         piano.fillKey(noteName);
-      } else if (cmd===0x80 || (cmd===0x90&&vel===0)) {
+      } else if (cmd===0x80 || (cmd===0x90 && vel===0)) {
         piano.clearKey(noteName);
       }
 
@@ -400,7 +386,7 @@
       } else {
         if (!synth) return;
         const freq = Tone.Frequency(note,'midi').toFrequency();
-        if (cmd===0x90&&vel>0) synth.triggerAttack(freq, Tone.now(), Math.pow(vel/127,2));
+        if (cmd===0x90 && vel>0) synth.triggerAttack(freq, Tone.now(), Math.pow(vel/127,2));
         else synth.triggerRelease(freq, Tone.now());
       }
     }
