--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
       width: 100%; max-width: 700px; 
       height: 150px; margin: 1.5em auto; margin-bottom: -10px;
     }
+    .midi-section select {
+  padding: .4em;
+  font-size: 1em;
+}
+
       </style>
 </head>
 <body>
