--- a/index.html
+++ b/index.html
@@ -125,9 +125,13 @@
       <div class="midi-section">
         <h3>MIDI recibido (del otro participante):</h3>
         <div class="midi-controls">
+          /no se ejecuta
           <span class="label">Seleccionar piano digital</span>
+          /no se ejecuta
           <div id="midiOutSelectCont"></div>
+          /no se ejecuta
           <button id="virtualBtn">🎧 Usar sonido virtual</button>
+          /no se ejecuta
         </div>
         <div id="midiStatus"></div>
       </div>
